Añadiendo las interrupciones

--- a/Tarea2Librerias/Tarea2Librerias.ioc
+++ b/Tarea2Librerias/Tarea2Librerias.ioc
@@ -35,10 +35,9 @@ Mcu.Pin22=PD2
 Mcu.Pin23=PB3
 Mcu.Pin24=PB7
 Mcu.Pin25=PB8
-Mcu.Pin26=PB9
-Mcu.Pin27=VP_SYS_VS_Systick
-Mcu.Pin28=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin29=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin26=VP_SYS_VS_Systick
+Mcu.Pin27=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin28=VP_TIM3_VS_ClockSourceINT
 Mcu.Pin3=PH0 - OSC_IN
 Mcu.Pin4=PH1 - OSC_OUT
 Mcu.Pin5=PC2
@@ -46,7 +45,7 @@ Mcu.Pin6=PC3
 Mcu.Pin7=PA2
 Mcu.Pin8=PA3
 Mcu.Pin9=PA5
-Mcu.PinsNb=30
+Mcu.PinsNb=29
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F411RETx
@@ -98,11 +97,10 @@ PA3.GPIO_Label=USART_RX
 PA3.Locked=true
 PA3.Mode=Asynchronous
 PA3.Signal=USART2_RX
-PA5.GPIOParameters=GPIO_Speed,GPIO_Label
-PA5.GPIO_Label=LD2 [Green Led]
-PA5.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
+PA5.GPIOParameters=GPIO_Label
+PA5.GPIO_Label=aumentarTasaRefresco
 PA5.Locked=true
-PA5.Signal=GPIO_Output
+PA5.Signal=GPXTI5
 PB12.GPIOParameters=GPIO_Speed,GPIO_Label
 PB12.GPIO_Label=segmento11
 PB12.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
@@ -121,10 +119,6 @@ PB8.GPIOParameters=GPIO_Label
 PB8.GPIO_Label=SW
 PB8.Locked=true
 PB8.Signal=GPXTI8
-PB9.GPIOParameters=GPIO_Label
-PB9.GPIO_Label=aumentarTasaRefresco
-PB9.Locked=true
-PB9.Signal=GPXTI9
 PC10.GPIOParameters=GPIO_Speed,GPIO_Label
 PC10.GPIO_Label=segmento2
 PC10.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
@@ -221,7 +215,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART2_UART_Init-USART2-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART2_UART_Init-USART2-false-HAL-true,4-MX_TIM2_Init-TIM2-false-HAL-true,5-MX_TIM3_Init-TIM3-false-HAL-true
 RCC.48MHZClocksFreq_Value=84000000
 RCC.AHBFreq_Value=16000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
@@ -257,15 +251,15 @@ SH.GPXTI2.0=GPIO_EXTI2
 SH.GPXTI2.ConfNb=1
 SH.GPXTI3.0=GPIO_EXTI3
 SH.GPXTI3.ConfNb=1
+SH.GPXTI5.0=GPIO_EXTI5
+SH.GPXTI5.ConfNb=1
 SH.GPXTI8.0=GPIO_EXTI8
 SH.GPXTI8.ConfNb=1
-SH.GPXTI9.0=GPIO_EXTI9
-SH.GPXTI9.ConfNb=1
 TIM2.IPParameters=Prescaler,Period
 TIM2.Period=250-1
 TIM2.Prescaler=16000-1
 TIM3.IPParameters=Prescaler,Period
-TIM3.Period=20-1
+TIM3.Period=2
 TIM3.Prescaler=16000-1
 USART2.IPParameters=VirtualMode
 USART2.VirtualMode=VM_ASYNC
