--- a/Tarea2Librerias/Tarea2Librerias.ioc
+++ b/Tarea2Librerias/Tarea2Librerias.ioc
@@ -167,11 +167,10 @@ PC8.GPIO_Label=segmento7
 PC8.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
 PC8.Locked=true
 PC8.Signal=GPIO_Output
-PC9.GPIOParameters=GPIO_Speed,GPIO_Label
+PC9.GPIOParameters=GPIO_Label
 PC9.GPIO_Label=DT
-PC9.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
 PC9.Locked=true
-PC9.Signal=GPIO_Output
+PC9.Signal=GPIO_Input
 PD2.GPIOParameters=GPIO_Speed,GPIO_Label
 PD2.GPIO_Label=segmento1
 PD2.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
