--- a/Examen/Examen.ioc
+++ b/Examen/Examen.ioc
@@ -17,23 +17,25 @@ Mcu.IP0=ADC1
 Mcu.IP1=NVIC
 Mcu.IP2=RCC
 Mcu.IP3=SYS
-Mcu.IP4=TIM2
-Mcu.IP5=TIM3
-Mcu.IP6=USART2
-Mcu.IPNb=7
+Mcu.IP4=TIM1
+Mcu.IP5=TIM2
+Mcu.IP6=TIM3
+Mcu.IP7=TIM4
+Mcu.IP8=USART2
+Mcu.IPNb=9
 Mcu.Name=STM32F411R(C-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13-ANTI_TAMP
 Mcu.Pin1=PC14-OSC32_IN
 Mcu.Pin10=PA4
 Mcu.Pin11=PA5
-Mcu.Pin12=PA6
-Mcu.Pin13=PA7
-Mcu.Pin14=PC5
-Mcu.Pin15=PB12
-Mcu.Pin16=PC6
-Mcu.Pin17=PC8
-Mcu.Pin18=PC9
+Mcu.Pin12=PC5
+Mcu.Pin13=PB12
+Mcu.Pin14=PC6
+Mcu.Pin15=PC8
+Mcu.Pin16=PC9
+Mcu.Pin17=PA8
+Mcu.Pin18=PA9
 Mcu.Pin19=PA11
 Mcu.Pin2=PC15-OSC32_OUT
 Mcu.Pin20=PA12
@@ -120,14 +122,14 @@ PA5.GPIOParameters=GPIO_Label
 PA5.GPIO_Label=aumentarTasaRefresco
 PA5.Locked=true
 PA5.Signal=GPXTI5
-PA6.GPIOParameters=GPIO_Label
-PA6.GPIO_Label=ledRojo
-PA6.Locked=true
-PA6.Signal=GPIO_Output
-PA7.GPIOParameters=GPIO_Label
-PA7.GPIO_Label=ledVerde
-PA7.Locked=true
-PA7.Signal=GPIO_Output
+PA8.GPIOParameters=GPIO_Label
+PA8.GPIO_Label=ledVerde
+PA8.Locked=true
+PA8.Signal=S_TIM1_CH1
+PA9.GPIOParameters=GPIO_Label
+PA9.GPIO_Label=ledRojo
+PA9.Locked=true
+PA9.Signal=S_TIM1_CH2
 PB12.GPIOParameters=GPIO_Speed,GPIO_Label
 PB12.GPIO_Label=segmento11
 PB12.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
@@ -147,9 +149,9 @@ PB8.GPIO_Label=SW
 PB8.Locked=true
 PB8.Signal=GPXTI8
 PB9.GPIOParameters=GPIO_Label
-PB9.GPIO_Label=ledAzul
+PB9.GPIO_Label=ledAZul
 PB9.Locked=true
-PB9.Signal=GPIO_Output
+PB9.Signal=S_TIM4_CH4
 PC10.GPIOParameters=GPIO_Speed,GPIO_Label
 PC10.GPIO_Label=segmento2
 PC10.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
@@ -245,7 +247,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART2_UART_Init-USART2-false-HAL-true,4-MX_TIM2_Init-TIM2-false-HAL-true,5-MX_TIM3_Init-TIM3-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART2_UART_Init-USART2-false-HAL-true,4-MX_TIM2_Init-TIM2-false-HAL-true,5-MX_TIM3_Init-TIM3-false-HAL-true,6-MX_ADC1_Init-ADC1-false-HAL-true
 RCC.48MHZClocksFreq_Value=84000000
 RCC.AHBFreq_Value=16000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
@@ -289,12 +291,30 @@ SH.GPXTI8.0=GPIO_EXTI8
 SH.GPXTI8.ConfNb=1
 SH.GPXTI9.0=GPIO_EXTI9
 SH.GPXTI9.ConfNb=1
+SH.S_TIM1_CH1.0=TIM1_CH1,PWM Generation1 CH1
+SH.S_TIM1_CH1.ConfNb=1
+SH.S_TIM1_CH2.0=TIM1_CH2,PWM Generation2 CH2
+SH.S_TIM1_CH2.ConfNb=1
+SH.S_TIM4_CH4.0=TIM4_CH4,PWM Generation4 CH4
+SH.S_TIM4_CH4.ConfNb=1
+TIM1.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
+TIM1.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
+TIM1.IPParameters=Channel-PWM Generation2 CH2,Channel-PWM Generation1 CH1,Prescaler,Period,Pulse-PWM Generation1 CH1,Pulse-PWM Generation2 CH2
+TIM1.Period=1000-1
+TIM1.Prescaler=16-1
+TIM1.Pulse-PWM\ Generation1\ CH1=200
+TIM1.Pulse-PWM\ Generation2\ CH2=80
 TIM2.IPParameters=Prescaler,Period
 TIM2.Period=250-1
 TIM2.Prescaler=16000-1
 TIM3.IPParameters=Prescaler,Period
 TIM3.Period=3
 TIM3.Prescaler=16000-1
+TIM4.Channel-PWM\ Generation4\ CH4=TIM_CHANNEL_4
+TIM4.IPParameters=Channel-PWM Generation4 CH4,Prescaler,Period,Pulse-PWM Generation4 CH4
+TIM4.Period=1000-1
+TIM4.Prescaler=16-1
+TIM4.Pulse-PWM\ Generation4\ CH4=100
 USART2.IPParameters=VirtualMode
 USART2.VirtualMode=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
