--- a/Examen/Examen.ioc
+++ b/Examen/Examen.ioc
@@ -1,9 +1,10 @@
 #MicroXplorer Configuration settings - do not modify
 ADC1.Channel-1\#ChannelRegularConversion=ADC_CHANNEL_4
 ADC1.Channel-2\#ChannelRegularConversion=ADC_CHANNEL_0
-ADC1.ContinuousConvMode=ENABLE
+ADC1.ContinuousConvMode=DISABLE
 ADC1.DMAContinuousRequests=ENABLE
-ADC1.IPParameters=Rank-1\#ChannelRegularConversion,master,Channel-1\#ChannelRegularConversion,SamplingTime-1\#ChannelRegularConversion,NbrOfConversionFlag,ScanConvMode,ContinuousConvMode,DMAContinuousRequests,Rank-2\#ChannelRegularConversion,Channel-2\#ChannelRegularConversion,SamplingTime-2\#ChannelRegularConversion,NbrOfConversion
+ADC1.ExternalTrigConv=ADC_EXTERNALTRIGCONV_T5_CC2
+ADC1.IPParameters=Rank-1\#ChannelRegularConversion,master,Channel-1\#ChannelRegularConversion,SamplingTime-1\#ChannelRegularConversion,NbrOfConversionFlag,ScanConvMode,ContinuousConvMode,DMAContinuousRequests,Rank-2\#ChannelRegularConversion,Channel-2\#ChannelRegularConversion,SamplingTime-2\#ChannelRegularConversion,NbrOfConversion,ExternalTrigConv
 ADC1.NbrOfConversion=2
 ADC1.NbrOfConversionFlag=1
 ADC1.Rank-1\#ChannelRegularConversion=1
@@ -20,7 +21,7 @@ Dma.ADC1.0.FIFOMode=DMA_FIFOMODE_DISABLE
 Dma.ADC1.0.Instance=DMA2_Stream0
 Dma.ADC1.0.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
 Dma.ADC1.0.MemInc=DMA_MINC_ENABLE
-Dma.ADC1.0.Mode=DMA_NORMAL
+Dma.ADC1.0.Mode=DMA_CIRCULAR
 Dma.ADC1.0.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
 Dma.ADC1.0.PeriphInc=DMA_PINC_DISABLE
 Dma.ADC1.0.Priority=DMA_PRIORITY_LOW
@@ -56,6 +57,7 @@ Mcu.CPN=STM32F411RET6
 Mcu.Family=STM32F4
 Mcu.IP0=ADC1
 Mcu.IP1=DMA
+Mcu.IP10=USART2
 Mcu.IP2=NVIC
 Mcu.IP3=RCC
 Mcu.IP4=SYS
@@ -63,45 +65,47 @@ Mcu.IP5=TIM1
 Mcu.IP6=TIM2
 Mcu.IP7=TIM3
 Mcu.IP8=TIM4
-Mcu.IP9=USART2
-Mcu.IPNb=10
+Mcu.IP9=TIM5
+Mcu.IPNb=11
 Mcu.Name=STM32F411R(C-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13-ANTI_TAMP
 Mcu.Pin1=PC14-OSC32_IN
-Mcu.Pin10=PA4
-Mcu.Pin11=PA5
-Mcu.Pin12=PC5
-Mcu.Pin13=PB12
-Mcu.Pin14=PC6
-Mcu.Pin15=PC8
-Mcu.Pin16=PC9
-Mcu.Pin17=PA8
-Mcu.Pin18=PA9
-Mcu.Pin19=PA11
+Mcu.Pin10=PA3
+Mcu.Pin11=PA4
+Mcu.Pin12=PA5
+Mcu.Pin13=PC5
+Mcu.Pin14=PB12
+Mcu.Pin15=PC6
+Mcu.Pin16=PC8
+Mcu.Pin17=PC9
+Mcu.Pin18=PA8
+Mcu.Pin19=PA9
 Mcu.Pin2=PC15-OSC32_OUT
-Mcu.Pin20=PA12
-Mcu.Pin21=PA13
-Mcu.Pin22=PA14
-Mcu.Pin23=PC10
-Mcu.Pin24=PC11
-Mcu.Pin25=PC12
-Mcu.Pin26=PD2
-Mcu.Pin27=PB3
-Mcu.Pin28=PB7
-Mcu.Pin29=PB8
+Mcu.Pin20=PA11
+Mcu.Pin21=PA12
+Mcu.Pin22=PA13
+Mcu.Pin23=PA14
+Mcu.Pin24=PC10
+Mcu.Pin25=PC11
+Mcu.Pin26=PC12
+Mcu.Pin27=PD2
+Mcu.Pin28=PB3
+Mcu.Pin29=PB7
 Mcu.Pin3=PH0 - OSC_IN
-Mcu.Pin30=PB9
-Mcu.Pin31=VP_SYS_VS_Systick
-Mcu.Pin32=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin33=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin30=PB8
+Mcu.Pin31=PB9
+Mcu.Pin32=VP_SYS_VS_Systick
+Mcu.Pin33=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin34=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin35=VP_TIM5_VS_ClockSourceINT
 Mcu.Pin4=PH1 - OSC_OUT
 Mcu.Pin5=PC2
 Mcu.Pin6=PC3
 Mcu.Pin7=PA0-WKUP
-Mcu.Pin8=PA2
-Mcu.Pin9=PA3
-Mcu.PinsNb=34
+Mcu.Pin8=PA1
+Mcu.Pin9=PA2
+Mcu.PinsNb=36
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F411RETx
@@ -130,6 +134,7 @@ PA0-WKUP.GPIOParameters=GPIO_Label
 PA0-WKUP.GPIO_Label=VRY
 PA0-WKUP.Locked=true
 PA0-WKUP.Signal=ADCx_IN0
+PA1.Signal=S_TIM5_CH2
 PA11.GPIOParameters=GPIO_Speed,GPIO_Label
 PA11.GPIO_Label=alimentacion3
 PA11.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
@@ -293,7 +298,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_USART2_UART_Init-USART2-false-HAL-true,5-MX_TIM2_Init-TIM2-false-HAL-true,6-MX_TIM3_Init-TIM3-false-HAL-true,7-MX_ADC1_Init-ADC1-false-HAL-true,8-MX_TIM1_Init-TIM1-false-HAL-true,9-MX_TIM4_Init-TIM4-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_USART2_UART_Init-USART2-false-HAL-true,5-MX_TIM2_Init-TIM2-false-HAL-true,6-MX_TIM3_Init-TIM3-false-HAL-true,7-MX_ADC1_Init-ADC1-false-HAL-true,8-MX_TIM1_Init-TIM1-false-HAL-true,9-MX_TIM4_Init-TIM4-false-HAL-true,10-MX_TIM5_Init-TIM5-false-HAL-true
 RCC.48MHZClocksFreq_Value=84000000
 RCC.AHBFreq_Value=16000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
@@ -343,6 +348,8 @@ SH.S_TIM1_CH2.0=TIM1_CH2,PWM Generation2 CH2
 SH.S_TIM1_CH2.ConfNb=1
 SH.S_TIM4_CH4.0=TIM4_CH4,PWM Generation4 CH4
 SH.S_TIM4_CH4.ConfNb=1
+SH.S_TIM5_CH2.0=TIM5_CH2,Output Compare2 CH2
+SH.S_TIM5_CH2.ConfNb=1
 TIM1.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM1.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
 TIM1.IPParameters=Channel-PWM Generation2 CH2,Channel-PWM Generation1 CH1,Prescaler,Period,Pulse-PWM Generation1 CH1,Pulse-PWM Generation2 CH2
@@ -361,6 +368,12 @@ TIM4.IPParameters=Channel-PWM Generation4 CH4,Prescaler,Period,Pulse-PWM Generat
 TIM4.Period=1000-1
 TIM4.Prescaler=16-1
 TIM4.Pulse-PWM\ Generation4\ CH4=100
+TIM5.Channel-Output\ Compare2\ CH2=TIM_CHANNEL_2
+TIM5.IPParameters=Prescaler,Period,Channel-Output Compare2 CH2,TIM_MasterOutputTrigger,OCMode_2
+TIM5.OCMode_2=TIM_OCMODE_TOGGLE
+TIM5.Period=100-1
+TIM5.Prescaler=16000-1
+TIM5.TIM_MasterOutputTrigger=TIM_TRGO_OC2REF
 USART2.IPParameters=VirtualMode
 USART2.VirtualMode=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
@@ -369,6 +382,8 @@ VP_TIM2_VS_ClockSourceINT.Mode=Internal
 VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
 VP_TIM3_VS_ClockSourceINT.Mode=Internal
 VP_TIM3_VS_ClockSourceINT.Signal=TIM3_VS_ClockSourceINT
+VP_TIM5_VS_ClockSourceINT.Mode=Internal
+VP_TIM5_VS_ClockSourceINT.Signal=TIM5_VS_ClockSourceINT
 board=NUCLEO-F411RE
 boardIOC=true
 isbadioc=false
