Aumento de estados en la maquina de estados
Se agregó la lectura del dato por cada vez que varie el dato, mediante una interrupcion con EXTI

--- a/Tarea4/Tarea4.ioc
+++ b/Tarea4/Tarea4.ioc
@@ -46,15 +46,16 @@ Mcu.Name=STM32F411R(C-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PH1 - OSC_OUT
 Mcu.Pin1=PA2
+Mcu.Pin10=VP_TIM2_VS_ClockSourceINT
 Mcu.Pin2=PA3
-Mcu.Pin3=PA13
-Mcu.Pin4=PA14
-Mcu.Pin5=PB3
-Mcu.Pin6=PB8
-Mcu.Pin7=PB9
-Mcu.Pin8=VP_SYS_VS_Systick
-Mcu.Pin9=VP_TIM2_VS_ClockSourceINT
-Mcu.PinsNb=10
+Mcu.Pin3=PB2
+Mcu.Pin4=PA13
+Mcu.Pin5=PA14
+Mcu.Pin6=PB3
+Mcu.Pin7=PB8
+Mcu.Pin8=PB9
+Mcu.Pin9=VP_SYS_VS_Systick
+Mcu.PinsNb=11
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F411RETx
@@ -64,6 +65,7 @@ NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 NVIC.DMA1_Stream0_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DMA1_Stream1_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
+NVIC.EXTI2_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
@@ -94,6 +96,10 @@ PA3.GPIO_Label=USART_RX
 PA3.Locked=true
 PA3.Mode=Asynchronous
 PA3.Signal=USART2_RX
+PB2.GPIOParameters=GPIO_Label
+PB2.GPIO_Label=actualizacionDato
+PB2.Locked=true
+PB2.Signal=GPXTI2
 PB3.GPIOParameters=GPIO_Label
 PB3.GPIO_Label=SWO
 PB3.Locked=true
@@ -172,6 +178,8 @@ RCC.VCOInputFreq_Value=1000000
 RCC.VCOInputMFreq_Value=1000000
 RCC.VCOOutputFreq_Value=336000000
 RCC.VcooutputI2S=96000000
+SH.GPXTI2.0=GPIO_EXTI2
+SH.GPXTI2.ConfNb=1
 TIM2.IPParameters=Prescaler,Period
 TIM2.Period=250-1
 TIM2.Prescaler=16000-1
