--- a/Tarea4/Tarea4.ioc
+++ b/Tarea4/Tarea4.ioc
@@ -7,7 +7,7 @@ Dma.I2C1_RX.0.FIFOMode=DMA_FIFOMODE_DISABLE
 Dma.I2C1_RX.0.Instance=DMA1_Stream0
 Dma.I2C1_RX.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
 Dma.I2C1_RX.0.MemInc=DMA_MINC_ENABLE
-Dma.I2C1_RX.0.Mode=DMA_CIRCULAR
+Dma.I2C1_RX.0.Mode=DMA_NORMAL
 Dma.I2C1_RX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
 Dma.I2C1_RX.0.PeriphInc=DMA_PINC_DISABLE
 Dma.I2C1_RX.0.Priority=DMA_PRIORITY_LOW
@@ -46,16 +46,17 @@ Mcu.Name=STM32F411R(C-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PH1 - OSC_OUT
 Mcu.Pin1=PA2
-Mcu.Pin10=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin10=VP_SYS_VS_Systick
+Mcu.Pin11=VP_TIM2_VS_ClockSourceINT
 Mcu.Pin2=PA3
-Mcu.Pin3=PB2
-Mcu.Pin4=PA13
-Mcu.Pin5=PA14
-Mcu.Pin6=PB3
-Mcu.Pin7=PB8
-Mcu.Pin8=PB9
-Mcu.Pin9=VP_SYS_VS_Systick
-Mcu.PinsNb=11
+Mcu.Pin3=PA6
+Mcu.Pin4=PB2
+Mcu.Pin5=PA13
+Mcu.Pin6=PA14
+Mcu.Pin7=PB3
+Mcu.Pin8=PB8
+Mcu.Pin9=PB9
+Mcu.PinsNb=12
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F411RETx
@@ -96,6 +97,10 @@ PA3.GPIO_Label=USART_RX
 PA3.Locked=true
 PA3.Mode=Asynchronous
 PA3.Signal=USART2_RX
+PA6.GPIOParameters=GPIO_Label
+PA6.GPIO_Label=ledPrueba
+PA6.Locked=true
+PA6.Signal=GPIO_Output
 PB2.GPIOParameters=GPIO_Label
 PB2.GPIO_Label=actualizacionDato
 PB2.Locked=true
