--- a/Tarea4/Tarea4.ioc
+++ b/Tarea4/Tarea4.ioc
@@ -27,10 +27,9 @@ Dma.Request1=I2C1_TX
 Dma.RequestsNb=2
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
-I2C1.ClockSpeed=400000
-I2C1.DutyCycle=I2C_DUTYCYCLE_16_9
-I2C1.I2C_Mode=I2C_Fast
-I2C1.IPParameters=I2C_Mode,DutyCycle,ClockSpeed
+I2C1.ClockSpeed=100000
+I2C1.I2C_Mode=I2C_Standard
+I2C1.IPParameters=I2C_Mode,ClockSpeed
 KeepUserPlacement=false
 Mcu.CPN=STM32F411RET6
 Mcu.Family=STM32F4
@@ -38,25 +37,28 @@ Mcu.IP0=DMA
 Mcu.IP1=I2C1
 Mcu.IP2=NVIC
 Mcu.IP3=RCC
-Mcu.IP4=SYS
-Mcu.IP5=TIM2
-Mcu.IP6=USART2
-Mcu.IPNb=7
+Mcu.IP4=SPI1
+Mcu.IP5=SYS
+Mcu.IP6=TIM2
+Mcu.IP7=USART2
+Mcu.IPNb=8
 Mcu.Name=STM32F411R(C-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PH1 - OSC_OUT
 Mcu.Pin1=PA2
-Mcu.Pin10=VP_SYS_VS_Systick
-Mcu.Pin11=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin10=PB8
+Mcu.Pin11=PB9
+Mcu.Pin12=VP_SYS_VS_Systick
+Mcu.Pin13=VP_TIM2_VS_ClockSourceINT
 Mcu.Pin2=PA3
-Mcu.Pin3=PA6
-Mcu.Pin4=PB2
-Mcu.Pin5=PA13
-Mcu.Pin6=PA14
-Mcu.Pin7=PB3
-Mcu.Pin8=PB8
-Mcu.Pin9=PB9
-Mcu.PinsNb=12
+Mcu.Pin3=PA5
+Mcu.Pin4=PA6
+Mcu.Pin5=PA7
+Mcu.Pin6=PB2
+Mcu.Pin7=PA13
+Mcu.Pin8=PA14
+Mcu.Pin9=PB3
+Mcu.PinsNb=14
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F411RETx
@@ -76,6 +78,7 @@ NVIC.PriorityGroup=NVIC_PRIORITYGROUP_0
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:true\:false\:true\:true\:true\:false
 NVIC.TIM2_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.USART2_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 PA13.GPIOParameters=GPIO_Label
 PA13.GPIO_Label=TMS
@@ -97,12 +100,17 @@ PA3.GPIO_Label=USART_RX
 PA3.Locked=true
 PA3.Mode=Asynchronous
 PA3.Signal=USART2_RX
+PA5.Mode=TX_Only_Simplex_Unidirect_Master
+PA5.Signal=SPI1_SCK
 PA6.GPIOParameters=GPIO_Label
 PA6.GPIO_Label=ledPrueba
 PA6.Locked=true
 PA6.Signal=GPIO_Output
-PB2.GPIOParameters=GPIO_Label
+PA7.Mode=TX_Only_Simplex_Unidirect_Master
+PA7.Signal=SPI1_MOSI
+PB2.GPIOParameters=GPIO_Label,GPIO_ModeDefaultEXTI
 PB2.GPIO_Label=actualizacionDato
+PB2.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
 PB2.Locked=true
 PB2.Signal=GPXTI2
 PB3.GPIOParameters=GPIO_Label
@@ -185,6 +193,11 @@ RCC.VCOOutputFreq_Value=336000000
 RCC.VcooutputI2S=96000000
 SH.GPXTI2.0=GPIO_EXTI2
 SH.GPXTI2.ConfNb=1
+SPI1.CalculateBaudRate=8.0 MBits/s
+SPI1.Direction=SPI_DIRECTION_2LINES
+SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate
+SPI1.Mode=SPI_MODE_MASTER
+SPI1.VirtualType=VM_MASTER
 TIM2.IPParameters=Prescaler,Period
 TIM2.Period=250-1
 TIM2.Prescaler=16000-1
