--- a/proyecto/proyecto.ioc
+++ b/proyecto/proyecto.ioc
@@ -22,16 +22,18 @@ Mcu.Name=STM32F411R(C-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PH1 - OSC_OUT
 Mcu.Pin1=PA2
-Mcu.Pin10=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin10=VP_SYS_VS_Systick
+Mcu.Pin11=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin12=VP_TIM3_VS_ClockSourceINT
 Mcu.Pin2=PA3
-Mcu.Pin3=PA13
-Mcu.Pin4=PA14
-Mcu.Pin5=PB3
-Mcu.Pin6=PB8
-Mcu.Pin7=PB9
-Mcu.Pin8=VP_SYS_VS_Systick
-Mcu.Pin9=VP_TIM2_VS_ClockSourceINT
-Mcu.PinsNb=11
+Mcu.Pin3=PB12
+Mcu.Pin4=PA11
+Mcu.Pin5=PA13
+Mcu.Pin6=PA14
+Mcu.Pin7=PB3
+Mcu.Pin8=PB8
+Mcu.Pin9=PB9
+Mcu.PinsNb=13
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F411RETx
@@ -50,6 +52,10 @@ NVIC.SysTick_IRQn=true\:0\:0\:true\:false\:true\:true\:true\:false
 NVIC.TIM2_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.TIM3_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
+PA11.GPIOParameters=GPIO_Label
+PA11.GPIO_Label=STEP
+PA11.Locked=true
+PA11.Signal=GPIO_Output
 PA13.GPIOParameters=GPIO_Label
 PA13.GPIO_Label=TMS
 PA13.Locked=true
@@ -70,6 +76,10 @@ PA3.GPIO_Label=USART_RX
 PA3.Locked=true
 PA3.Mode=Asynchronous
 PA3.Signal=USART2_RX
+PB12.GPIOParameters=GPIO_Label
+PB12.GPIO_Label=DIR
+PB12.Locked=true
+PB12.Signal=GPIO_Output
 PB3.GPIOParameters=GPIO_Label
 PB3.GPIO_Label=SWO
 PB3.Locked=true
@@ -115,7 +125,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART2_UART_Init-USART2-false-HAL-true,4-MX_TIM2_Init-TIM2-false-HAL-true,5-MX_I2C1_Init-I2C1-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART2_UART_Init-USART2-false-HAL-true,4-MX_TIM2_Init-TIM2-false-HAL-true,5-MX_I2C1_Init-I2C1-false-HAL-true,6-MX_TIM3_Init-TIM3-false-HAL-true
 RCC.48MHZClocksFreq_Value=84000000
 RCC.AHBFreq_Value=16000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
