secuencias del movimiento

--- a/proyecto/proyecto.ioc
+++ b/proyecto/proyecto.ioc
@@ -26,28 +26,29 @@ Mcu.Name=STM32F411R(C-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13-ANTI_TAMP
 Mcu.Pin1=PH1 - OSC_OUT
-Mcu.Pin10=PA14
-Mcu.Pin11=PD2
-Mcu.Pin12=PB3
-Mcu.Pin13=PB7
-Mcu.Pin14=PB8
-Mcu.Pin15=PB9
-Mcu.Pin16=VP_SYS_VS_Systick
-Mcu.Pin17=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin18=VP_TIM3_VS_ClockSourceINT
-Mcu.Pin19=VP_TIM4_VS_ClockSourceINT
+Mcu.Pin10=PA13
+Mcu.Pin11=PA14
+Mcu.Pin12=PD2
+Mcu.Pin13=PB3
+Mcu.Pin14=PB7
+Mcu.Pin15=PB8
+Mcu.Pin16=PB9
+Mcu.Pin17=VP_SYS_VS_Systick
+Mcu.Pin18=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin19=VP_TIM3_VS_ClockSourceINT
 Mcu.Pin2=PC2
-Mcu.Pin20=VP_TIM5_VS_ClockSourceINT
-Mcu.Pin21=VP_TIM9_VS_ClockSourceINT
-Mcu.Pin22=VP_TIM10_VS_ClockSourceINT
+Mcu.Pin20=VP_TIM4_VS_ClockSourceINT
+Mcu.Pin21=VP_TIM5_VS_ClockSourceINT
+Mcu.Pin22=VP_TIM9_VS_ClockSourceINT
+Mcu.Pin23=VP_TIM10_VS_ClockSourceINT
 Mcu.Pin3=PA2
 Mcu.Pin4=PA3
 Mcu.Pin5=PA5
 Mcu.Pin6=PA6
 Mcu.Pin7=PA7
 Mcu.Pin8=PB12
-Mcu.Pin9=PA13
-Mcu.PinsNb=23
+Mcu.Pin9=PC9
+Mcu.PinsNb=24
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F411RETx
@@ -129,6 +130,8 @@ PC2.GPIOParameters=GPIO_Label
 PC2.GPIO_Label=DIR
 PC2.Locked=true
 PC2.Signal=GPIO_Output
+PC9.Locked=true
+PC9.Signal=S_TIM3_CH4
 PD2.GPIOParameters=GPIO_Label
 PD2.GPIO_Label=clock
 PD2.Locked=true
@@ -168,7 +171,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART2_UART_Init-USART2-false-HAL-true,4-MX_TIM2_Init-TIM2-false-HAL-true,5-MX_I2C1_Init-I2C1-false-HAL-true,6-MX_TIM3_Init-TIM3-false-HAL-true,7-MX_TIM4_Init-TIM4-false-HAL-true,8-MX_TIM5_Init-TIM5-false-HAL-true,9-MX_TIM9_Init-TIM9-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART2_UART_Init-USART2-false-HAL-true,4-MX_TIM2_Init-TIM2-false-HAL-true,5-MX_I2C1_Init-I2C1-false-HAL-true,6-MX_TIM3_Init-TIM3-false-HAL-true,7-MX_TIM4_Init-TIM4-false-HAL-true,8-MX_TIM5_Init-TIM5-false-HAL-true,9-MX_TIM9_Init-TIM9-false-HAL-true,10-MX_TIM10_Init-TIM10-false-HAL-true
 RCC.48MHZClocksFreq_Value=84000000
 RCC.AHBFreq_Value=16000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
@@ -209,22 +212,25 @@ SH.GPXTI6.0=GPIO_EXTI6
 SH.GPXTI6.ConfNb=1
 SH.GPXTI7.0=GPIO_EXTI7
 SH.GPXTI7.ConfNb=1
+SH.S_TIM3_CH4.0=TIM3_CH4,PWM Generation4 CH4
+SH.S_TIM3_CH4.ConfNb=1
 SH.S_TIM4_CH2.0=TIM4_CH2,PWM Generation2 CH2
 SH.S_TIM4_CH2.ConfNb=1
 TIM10.IPParameters=Prescaler,Period
-TIM10.Period=2000
+TIM10.Period=800
 TIM10.Prescaler=16000
 TIM2.IPParameters=Prescaler,Period
 TIM2.Period=250-1
 TIM2.Prescaler=16000-1
-TIM3.IPParameters=Prescaler,Period
+TIM3.Channel-PWM\ Generation4\ CH4=TIM_CHANNEL_4
+TIM3.IPParameters=Prescaler,Period,Channel-PWM Generation4 CH4
 TIM3.Period=8000
 TIM3.Prescaler=10000-1
 TIM4.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
 TIM4.IPParameters=Channel-PWM Generation2 CH2,Prescaler,Period,Pulse-PWM Generation2 CH2
-TIM4.Period=30
-TIM4.Prescaler=16000
-TIM4.Pulse-PWM\ Generation2\ CH2=30
+TIM4.Period=100
+TIM4.Prescaler=1600
+TIM4.Pulse-PWM\ Generation2\ CH2=10
 TIM5.IPParameters=Period,Prescaler
 TIM5.Period=8000
 TIM5.Prescaler=10000-1
