--- a/Clase_capturaFrecuencia/Clase_capturaFrecuencia.ioc
+++ b/Clase_capturaFrecuencia/Clase_capturaFrecuencia.ioc
@@ -63,6 +63,8 @@ NVIC.SysTick_IRQn=true\:0\:0\:true\:false\:true\:true\:true\:false
 NVIC.TIM2_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.TIM3_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
+PA1.GPIOParameters=GPIO_Label
+PA1.GPIO_Label=leds
 PA1.Locked=true
 PA1.Signal=S_TIM5_CH2
 PA13.GPIOParameters=GPIO_Label
